remove flex-wrap for buttons to avoid buttons suddenly change when fixChromeBlur & width: auto

--- a/xdialog.css
+++ b/xdialog.css
@@ -115,7 +115,6 @@ perspective effects (not including the dialogs and the overlay).
     padding: 0em 3em 2em 3em;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .xd-content .xd-button {
